@@ -23,7 +23,7 @@ import getsvnrev
 
 # The various parts of the version number
 _version_number_major = 1
-_version_number_minor = 0
+_version_number_minor = 1
 _version_number_revision = 0
 
 # Set to True if this is an official release.
